--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,16 @@ dependencies:
   cloud_firestore: ^4.9.2
   shared_preferences: ^2.2.1
   rive: ^0.11.17
+  go_router: ^11.1.2
+  dotted_border: ^2.1.0
+  cached_network_image: ^3.3.0
+  connectivity_plus: ^4.0.2
+  video_player: ^2.7.2
+  video_thumbnail: ^0.5.3
+  gap: ^3.0.1
+  flutter_staggered_grid_view: ^0.7.0
+  image_picker: ^1.0.4
+  workmanager: ^0.5.2
 
 dev_dependencies:
   flutter_test:
@@ -38,11 +48,13 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-    - assets/rive/
+
 
 
   fonts:
     - family: Raleway
       fonts:
         - asset: assets/fonts/Raleway.ttf
+        - asset: assets/fonts/Raleway-Bold.ttf
+          weight: 700
         
